--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "the user management serice",
   "main": "index.js",
   "scripts": {
-    "dev" : "node src/server.js",
+    "dev": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "abu shama",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^22.15.29",
+    "typescript": "^5.8.3"
+  }
 }
