--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
     "dev": "node src/server.js",
     "format:fix": "prettier . --write",
     "format:check": "prettier . --check",
+    "lint:check": "eslint .",
+    "lint:fix": "eslint . --fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "abu shama",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.28.0",
     "@types/node": "^22.15.29",
+    "eslint": "^9.28.0",
     "prettier": "3.5.3",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.33.1"
   }
 }
