--- a/package.json
+++ b/package.json
@@ -1,30 +1,33 @@
 {
-  "name": "auth-service",
-  "version": "1.0.0",
-  "description": "the user management serice",
-  "main": "index.js",
-  "scripts": {
-    "dev": "node src/server.js",
-    "format:fix": "prettier . --write",
-    "format:check": "prettier . --check",
-    "lint:check": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky"
-  },
-  "author": "abu shama",
-  "license": "ISC",
-  "devDependencies": {
-    "@eslint/js": "^9.28.0",
-    "@types/node": "^22.15.29",
-    "eslint": "^9.28.0",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.1.0",
-    "prettier": "3.5.3",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.33.1"
-  },
-  "lint-staged": {
-    "*.ts": ["npm run format:fix", "npm run lint:fix"]
-  }
+    "name": "auth-service",
+    "version": "1.0.0",
+    "description": "the user management serice",
+    "main": "index.js",
+    "scripts": {
+        "dev": "node src/server.js",
+        "format:fix": "prettier . --write",
+        "format:check": "prettier . --check",
+        "lint:check": "eslint .",
+        "lint:fix": "eslint . --fix",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "prepare": "husky"
+    },
+    "author": "abu shama",
+    "license": "ISC",
+    "devDependencies": {
+        "@eslint/js": "^9.28.0",
+        "@types/node": "^22.15.29",
+        "eslint": "^9.28.0",
+        "husky": "^9.1.7",
+        "lint-staged": "^16.1.0",
+        "prettier": "3.5.3",
+        "typescript": "^5.8.3",
+        "typescript-eslint": "^8.33.1"
+    },
+    "lint-staged": {
+        "*.ts": [
+            "npm run format:fix",
+            "npm run lint:fix"
+        ]
+    }
 }
