--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "the user management serice",
     "main": "index.js",
     "scripts": {
-        "dev": "node src/server.js",
+        "dev": "nodemon src/server.ts",
         "format:fix": "prettier . --write",
         "format:check": "prettier . --check",
         "lint:check": "eslint .",
@@ -16,11 +16,14 @@
     "license": "ISC",
     "devDependencies": {
         "@eslint/js": "^9.28.0",
+        "@types/express": "^5.0.3",
         "@types/node": "^22.15.29",
         "eslint": "^9.28.0",
         "husky": "^9.1.7",
         "lint-staged": "^16.1.0",
+        "nodemon": "^3.1.10",
         "prettier": "3.5.3",
+        "ts-node": "^10.9.2",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.33.1"
     },
@@ -31,6 +34,7 @@
         ]
     },
     "dependencies": {
-        "dotenv": "^16.5.0"
+        "dotenv": "^16.5.0",
+        "express": "^5.1.0"
     }
 }
