--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "format:check": "prettier . --check",
         "lint:check": "eslint .",
         "lint:fix": "eslint . --fix",
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest --watch --runInBand",
         "prepare": "husky"
     },
     "author": "abu shama",
@@ -18,13 +18,18 @@
         "@eslint/js": "^9.28.0",
         "@types/express": "^5.0.3",
         "@types/http-errors": "^2.0.5",
+        "@types/jest": "^29.5.14",
         "@types/node": "^22.15.29",
+        "@types/supertest": "^6.0.3",
         "@types/winston": "^2.4.4",
         "eslint": "^9.28.0",
         "husky": "^9.1.7",
+        "jest": "^29.7.0",
         "lint-staged": "^16.1.0",
         "nodemon": "^3.1.10",
         "prettier": "3.5.3",
+        "supertest": "^7.1.1",
+        "ts-jest": "^29.3.4",
         "ts-node": "^10.9.2",
         "typescript": "^5.8.3",
         "typescript-eslint": "^8.33.1"
